--- a/ITJobsApp/ITJobsApp/Pages/_ViewImports.cshtml
+++ b/ITJobsApp/ITJobsApp/Pages/_ViewImports.cshtml
@@ -1,3 +1,8 @@
 @using ITJobsApp
 @namespace ITJobsApp.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using Microsoft.AspNetCore.Identity
+
+@using ITJobsApp.Model.Models
+@using ITJobsApp.ViewModels
+@using ITJobsApp.Model
