--- a/ITJobsApp/ITJobsApp/Views/Ad/MyAds.cshtml
+++ b/ITJobsApp/ITJobsApp/Views/Ad/MyAds.cshtml
@@ -20,7 +20,7 @@
     @foreach (var item in Model)
     {
         <tr data-toggle="collapse" id="xman" data-target="@("#" + item.Id.ToString())" style="cursor:pointer;">
-            <td class="text-center">@item.Title</td>
+            <td class="text-center"><b>@item.Title</b></td>
             <td class="text-center">
                 <a asp-action="Edit" asp-route-id="@item.Id" class="btn btn-warning btn-sm">✎</a>
                 <form asp-action="Delete" asp-route-id="@item.Id"
@@ -55,9 +55,7 @@
                                 <div>
                                     <h4>Broj radnih sati tjedno:<b>    @item.NumberOfWorkingHours</b></h4>
                                 </div>
-                                <div>
-                                    <h4>Zahtjevane vještine:<b>    @item.RequiredSkills</b></h4>
-                                </div>
+                                
                             </div>
                             <div class="column2">
                                 <div>
@@ -65,6 +63,9 @@
                                 </div>
                                 <div>
                                     @item.JobSummary
+                                </div>
+                                <div>
+                                    <h4>Zahtjevane vještine:<b>    @item.RequiredSkills</b></h4>
                                 </div>
                             </div>
                             <div class="column2">
@@ -74,9 +75,9 @@
                                 <div>
                                     @foreach (var x in item.AdIndividual)
                                     {
-                                        <h1>@x.Individual.Name</h1>
+                                        <h4><a asp-controller="Account" asp-action="Show" asp-route-id="@x.Individual.Id">@x.Individual.Name @x.Individual.Surname</a></h4>
                                     }
-                                    </div>
+                                </div>
                             </div>
 
                         </div>
@@ -140,14 +141,14 @@
 
     .column1 {
         float: left;
-        width: 20%;
+        width: 35%;
         padding: 30px;
         height: 280px; /* Should be removed. Only for demonstration */
     }
 
     .column2 {
         float: left;
-        width: 40%;
+        width: 30%;
         padding: 30px;
         height: 280px; /* Should be removed. Only for demonstration */
     }
