--- a/ITJobsApp/ITJobsApp/Views/Manage/IndexIndividual.cshtml
+++ b/ITJobsApp/ITJobsApp/Views/Manage/IndexIndividual.cshtml
@@ -14,6 +14,10 @@
                 <input asp-for="Surname" id="da" class="form-control" />
             </div>
             <div class="form-group">
+                <label asp-for="DateOfBirth">Datum rođenja</label>
+                <input asp-for="DateOfBirth" class="form-control" />
+            </div>
+            <div class="form-group">
                 <label asp-for="Email"></label>
                 <input asp-for="Email" id="da" class="form-control" />
             </div>
@@ -22,11 +26,14 @@
                 <input asp-for="Address" id="da" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="City"></label>
+                <label asp-for="City">Grad</label>
                 <input asp-for="City" id="da" class="form-control" />
             </div>
             <div class="form-group">
-                <label asp-for="PhoneNumber"></label>
+                <b>Hrvatska</b>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhoneNumber">Broj telefona</label>
                 <input asp-for="PhoneNumber" id="da" class="form-control" />
             </div>
             <div class="form-group">
@@ -36,15 +43,6 @@
             <div class="form-group">
                 <label asp-for="Skills">Vještine  </label>
                 <textarea asp-for="Skills" class="form-control"></textarea>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateOfBirth">Datum rođenja</label>
-                <input asp-for="DateOfBirth" class="form-control" />
-            </div>
-
-
-            <div class="form-group">
-                <b>Hrvatska</b>
             </div>
             <button type="submit" class="btn btn-primary">Spremi</button>
         </form>
