--- a/ITJobsApp/ITJobsApp/Views/Shared/_LoginPartial.cshtml
+++ b/ITJobsApp/ITJobsApp/Views/Shared/_LoginPartial.cshtml
@@ -4,6 +4,9 @@
 
 @if (SignInManager.IsSignedIn(User))
 {<ul class="nav navbar-nav navbar-right">
+    <li><a asp-controller="Company" asp-action="Index">Firme</a></li>
+    <li><a asp-controller="Ad" asp-action="Index">Oglasi</a></li>
+
     <li class="dropdown">
         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Moj profil<span class="caret"></span></a>
         <ul class="dropdown-menu" role="menu" id="robo">
@@ -11,7 +14,7 @@
             @if (User.IsInRole("Individual"))
             {
                 <li><a asp-controller="Manage" asp-action="IndexIndividual">Uredi profil</a></li>
-                <li><a asp-controller="Manage" asp-action="Index">Moje prijave na oglase</a></li>
+                <li><a asp-controller="Ad" asp-action="MyApplys">Moje prijave na oglase</a></li>
                 <li><a asp-controller="Manage" asp-action="ChangePassword">Promijeni lozinku</a></li>
                 <li>
                     <div id="poly">
@@ -69,6 +72,7 @@ else
 
     #moly {
         font-size: 17px;
-        color: #f2f2f2;
+        color: black;
+        padding-left: 4px;
     }
 </style>
