--- a/ITJobsApp/ITJobsApp/Views/UnregHome/Index.cshtml
+++ b/ITJobsApp/ITJobsApp/Views/UnregHome/Index.cshtml
@@ -1,28 +1,41 @@
-﻿<html>
-    <body>
+﻿@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
+<html>
+<body>
+    <h1 class="xy">IT Jobs Finder</h1>
+    <h1> </h1>
+    <h1> </h1>
+    <h1> </h1>
+    <h1> </h1>
+    <h1> </h1>
+    <h1> </h1>
+    <h1> </h1>
+    <h1> </h1>
+    <h5> </h5>
 
+    @if (!SignInManager.IsSignedIn(User))
+    {
         <div class="a1">
-            <a asp-controller="Drugs" asp-action="Index" class="btn btn-success btn-lg" role="button">
-                Istraži
-            </a>
             <a asp-controller="Account" asp-action="Login" class="btn btn-primary btn-lg" role="button">
                 Prijava/Registracija
             </a>
         </div>
+    }
 
 
 
-        <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
-        <script src="~/js/site.js" asp-append-version="true"></script>
-        <script src="~/lib/bootstrap-multiselect/js/bootstrap-multiselect.js"></script>
-    </body>
-    </html>
+
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
+    <script src="~/js/site.js" asp-append-version="true"></script>
+    <script src="~/lib/bootstrap-multiselect/js/bootstrap-multiselect.js"></script>
+</body>
+</html>
 
 <style>
     body {
-        background-image: url(/images/it.jpg);
+        background-image: linear-gradient( rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3) ),url(/images/it.jpg);
         /* Full height */
         height: 100%;
         /* Center and scale the image nicely */
@@ -30,11 +43,18 @@
         background-repeat: no-repeat;
         background-size: cover;
     }
+
     .a1 {
         position: fixed;
         top: 50%;
         left: 50%;
         margin-top: -50px;
         margin-left: -100px;
+    }
+
+    .xy {
+        color: white;
+        text-align: center;
+        font-size: 70px;
     }
 </style>
