--- a/ITJobsApp/ITJobsApp/Views/Account/RegisterIndividual.cshtml
+++ b/ITJobsApp/ITJobsApp/Views/Account/RegisterIndividual.cshtml
@@ -1,71 +1,69 @@
 ﻿@model RegisterIndividualViewModel
-
-<form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
+    <h1>Registracija</h1>
     <hr />
-    <div asp-validation-summary="All" class="text-danger"></div>
-    <div class="row">
-        <div class="col">
-            <div class="form-group">
-                <label asp-for="Name">Ime</label>
-                <input asp-for="Name" id="da" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Surname">Prezime</label>
-                <input asp-for="Surname" id="da" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Email"></label>
-                <input asp-for="Email" id="da" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Password">Lozinka</label>
-                <input asp-for="Password" id="da" class="form-control" />
+    <form asp-route-returnUrl="@ViewData["ReturnUrl"]" method="post">
 
-            </div>
-            <div class="form-group">
-                <label asp-for="ConfirmPassword">Potvrdite lozinku</label>
-                <input asp-for="ConfirmPassword" id="da" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="Address"></label>
-                <input asp-for="Address" id="da" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="City"></label>
-                <input asp-for="City" id="da" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="PhoneNumber"></label>
-                <input asp-for="PhoneNumber" id="da" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="About">Kratka biografija</label>
-                <textarea asp-for="About" class="form-control"></textarea>
-            </div>
-            <div class="form-group">
-                <label asp-for="Skills">Vještine  </label>
-                <textarea asp-for="Skills" class="form-control"></textarea>
-            </div>
-            <div class="form-group">
-                <label asp-for="DateOfBirth">Datum rođenja</label>
-                <input asp-for="DateOfBirth" class="form-control" />
-            </div>
-            <div class="form-group">
-                <label asp-for="DBIds">Koje baze podataka poznajete?</label>
-                <select multiple asp-for="DBIds" asp-items="@(new SelectList((IEnumerable<DataBase>) @ViewData["DBs"], "Id", "Name"))" class="form-control"></select>
-            </div>
-            <div class="form-group">
-                <label asp-for="PLIds">Koje programske jezike poznajete?</label>
-                <select multiple asp-for="PLIds" asp-items="@(new SelectList((IEnumerable<ProgrammingLanguage>) @ViewData["PLs"], "Id", "Name"))" class="form-control"></select>
-            </div>
+        <div asp-validation-summary="All" class="text-danger"></div>
+        <div class="row">
+            <div class="col">
+                <div class="form-group">
+                    <label asp-for="Name">Ime</label>
+                    <input asp-for="Name" id="da" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Surname">Prezime</label>
+                    <input asp-for="Surname" id="da" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Email"></label>
+                    <input asp-for="Email" id="da" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Password">Lozinka</label>
+                    <input asp-for="Password" id="da" class="form-control" />
 
-
-            <div class="form-group">
-                <b>Hrvatska</b>
+                </div>
+                <div class="form-group">
+                    <label asp-for="ConfirmPassword">Potvrdite lozinku</label>
+                    <input asp-for="ConfirmPassword" id="da" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="Address"></label>
+                    <input asp-for="Address" id="da" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="City">Grad</label>
+                    <input asp-for="City" id="da" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <b>Hrvatska</b>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PhoneNumber">Telefon</label>
+                    <input asp-for="PhoneNumber" id="da" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="About">Kratka biografija</label>
+                    <textarea asp-for="About" class="form-control"></textarea>
+                </div>
+                <div class="form-group">
+                    <label asp-for="Skills">Vještine  </label>
+                    <textarea asp-for="Skills" class="form-control"></textarea>
+                </div>
+                <div class="form-group">
+                    <label asp-for="DateOfBirth">Datum rođenja</label>
+                    <input asp-for="DateOfBirth" class="form-control" />
+                </div>
+                <div class="form-group">
+                    <label asp-for="DBIds">Koje baze podataka poznajete?</label>
+                    <select multiple asp-for="DBIds" asp-items="@(new SelectList((IEnumerable<DataBase>) @ViewData["DBs"], "Id", "Name"))" class="form-control"></select>
+                </div>
+                <div class="form-group">
+                    <label asp-for="PLIds">Koje programske jezike poznajete?</label>
+                    <select multiple asp-for="PLIds" asp-items="@(new SelectList((IEnumerable<ProgrammingLanguage>) @ViewData["PLs"], "Id", "Name"))" class="form-control"></select>
+                </div>
             </div>
 
         </div>
-
-    </div>
-    <button type="submit" class="btn btn-primary">Registriraj se</button>
-</form>
+        <button type="submit" class="btn btn-primary">Registriraj se</button>
+    </form>
