--- a/ITJobsApp/ITJobsApp/Views/Ad/CompanyAds.cshtml
+++ b/ITJobsApp/ITJobsApp/Views/Ad/CompanyAds.cshtml
@@ -39,7 +39,10 @@
                                 </div>
 
                                 <div>
-                                    <h4>Tvrtka: <b>@item.Company.Name</b></h4>
+                                    <h4>Firma: <a asp-controller="Company" asp-action="Show" asp-route-id="@item.Company.Id"><b>@item.Company.Name<b /></a><b> (@item.Company.BussinesType)</b></h4>
+                                </div>
+                                <div>
+                                    <h4>Mail firme: <b>@item.Company.Email.ToString()</b></h4>
                                 </div>
                                 <div>
                                     <h4>Vrsta oglasa: <b>@item.AdCategory.Name</b></h4>
@@ -50,7 +53,7 @@
                                 <div>
                                     <h4>Broj radnih sati tjedno:<b>    @item.NumberOfWorkingHours</b></h4>
                                 </div>
-                                
+
                             </div>
                             <div class="column2">
                                 <div>
