--- a/ITJobsApp/ITJobsApp/Views/Ad/MyAds.cshtml
+++ b/ITJobsApp/ITJobsApp/Views/Ad/MyAds.cshtml
@@ -28,6 +28,7 @@
                     <button type="submit" class="btn btn-danger btn-sm">✘</button>
                 </form>
             </td>
+
         <tr></tr>
         <tr class="bg-light">
             <td colspan="8" style="padding:0;margin:0;">
@@ -44,10 +45,10 @@
                                 </div>
 
                                 <div>
-                                    <h4>Tvrtka: <b>@item.Company.Name</b></h4>
+                                    <h4>Firma: <a asp-controller="Company" asp-action="Show" asp-route-id="@item.Company.Id"><b>@item.Company.Name<b /></a><b> (@item.Company.BussinesType)</b></h4>
                                 </div>
                                 <div>
-                                    <h4><b>@item.AdCategory.Name</b></h4>
+                                    <h4>Vrsta oglasa: <b>@item.AdCategory.Name</b></h4>
                                 </div>
                                 <div>
                                     <h4>Lokacija:<b>    @item.Location</b></h4>
@@ -83,7 +84,6 @@
                         </div>
 
                     </div>
-                </div>
             </td>
         </tr>
 
